test/runnable/imports/testminitAA.d
module imports.testminitAA;

import std.c.stdio;
int aa;

static this()
{
    printf("AA\n");
    aa = 1;
}

